@@ -1,3 +1,10 @@
+2004-12-01  Joel Brobecker  <brobecker@gnat.com>
+
+	* alpha-osf1-tdep.c (alpha_osf1_sigcontext_addr): Change
+	parameter name to make it clear that we already have a next
+	frame.  Return the sigcontext from that next frame instead
+	of the frame following it.
+
 2004-12-13  Randolph Chung  <tausq@debian.org>
 
 	* Makefile.in (pa64solib_h, somsolib_h): Delete.
